--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,7 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  background-color: #000028;
+  /* color: black; */
 }
+
