--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,181 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  border: 1px solid rebeccapurple;
+  /* display: flex; */
+  /* flex-direction: column; */
+  background-image: url(/images/cover-image-dark.png); 
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed; 
+  max-width: 1024px;
 }
+.header{
+  padding: 20px;
+  
+}
+.main{
+  display: grid;
+  gap: 80px;
+  padding: 0 20px;
+  margin: 60px 0;
+}
+.why{
+  display: grid;
+  grid-template-columns: minmax( 236px,314.96px) minmax(472px,648.918px);
+  grid-template-areas: "title p" ;
+  gap: 20px;
+}
+.why__content{
+  grid-area:p;
+  display: grid;
+  gap: 20px;
+}
+.why__title{
+  grid-area: title;
+}
+.why__content-lot{
+  display: grid;
+}
+
+.what{
+  display: grid;
+  gap: 20px;
+}
+.what__title{
+   display: grid;
+   grid-template-columns: repeat( 3 ,1fr);
+   grid-column: 1/3;
+}
+.what__content{
+  display: grid;
+  grid-template-columns: repeat(3 ,1fr);
+  gap: 20px;
+
+}
+.titlesw{
+    margin-bottom: 10px ;
+    /* background-color: brown; */
+}
+.how{
+  display: grid;
+  grid-template-columns: minmax( 236px,314.96px) minmax(472px,648.918px);
+  grid-template-areas: "le po" ;
+  gap: 20px;
+
+}
+
+.how__content{
+  grid-area:po;
+  display: grid;
+  gap: 20px;
+}
+.how__title{
+  grid-area: le;
+}
+.how__content-lot{
+  display: grid;
+  
+}
+
+
+
+
+
+
+/* .go{
+  position: absolute;
+  top:20px;
+  right:8%;
+  
+}
+
+.go::after{
+  content: 'asdsada';
+} */
+/* .hooo{
+  background-color: brown;
+  width: 9px;
+  height: 9px;
+  fill: #FF0070;
+  filter: drop-shadow(0px 0px 4px #FF0070);
+  border-radius: 50%;
+}
+
+.ho{
+  border-top: 1px solid red;
+  border-right: 1px solid red;
+  padding: 8px;
+  width: 25px ;
+  height: 25px;
+
+} */
+.header{
+  display: grid;
+  grid-template-columns: minmax( 200px,397px) 230px minmax(200px ,316px) 25px;
+  /* grid-template-rows: repeat(4 , 1fr); */
+  grid-template-areas: '. m . p' ;
+}
+
+
+.header__theme-menu-list{
+ display: flex;
+ gap: 10px;
+}
+
+.header__theme-menu-item{
+ border: 1px solid red;
+ padding: 0 13px;
+}
+.header__theme-menu{
+  grid-area: m;
+}
+
+.header__right-corner{
+  border-top: 1px solid red;
+  width: 25px;
+  height: 25px;
+  border-right: 1px solid red;
+  grid-area: p;
+  display: flex;
+ 
+}
+
+.header__left-corner{
+  width: 25px;
+  height: 25px;
+  border-left:1px solid red ;
+  border-bottom: 1px solid red;
+ 
+  
+}
+
+.header__right-corner::before{
+  content: '';
+  background-color: #FF0070;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  left: 90%;
+  top: 25px;
+  color: #FF0070;
+  margin: 8px 9px 8px 7px ;
+  fill: #FF0070;
+  filter: drop-shadow(0px 0px 4px #FF0070);
+}
+/* .header__title{
+  
+  grid-area: n;
+  margin-left: -20px;
+  margin-top: 273px;
+  color: #DB00FF;
+  max-width: 759px;
+  margin-bottom: 114px;
+} */
+/* .kok{
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+} */
+/* .header__text{
+  grid-area: l;
+} */
+
