--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,17 +3,23 @@
   и их переопределение под различные устройства
 */
 :root{
-  --color-big-title:#DB00FF;  
-  --color-bold-title:#FF0070;
-  --bold-fonts:700;
-  --normal:400px; 
-  --font-family:IBM Plex Mono;
-  --line-height:23.4px;
-  --font-size:18px;
-  --color-text:#F1B2CE;
-  --hover:rgba(255, 0, 112, 0.40);
-  --recc:'REC';
-  --circle:9px;
   --button:#FF0070;
-  --content-title:#FF0070;
+  --header-title:#DB00FF;
+  --header-title-shadow:#FF0070;
+  --header-text:#000028;
+  --corner:#FF0070; /*уголок */
+  --background:#FF0070;
+  --main-title:#FF0070;
+  --title:#000028;
+  --main-text:#F1B2CE;
+  --bold-fonts:700;
+  --normal-fonts:400;
+  --font-size:18px;
+  --line-height:23.4px;
+  --hover:rgba(255, 0, 112, 0.40);
+  --link-shadow:#FF0070;
+  --link-border:#F1B2CE;
+  --font-family:"IBM Plex Mono";
+  --rec:'REC';
+  --point:'';
 }
