--- a/styles/light.css
+++ b/styles/light.css
@@ -16,60 +16,131 @@
   background-size: cover;
   background-attachment: fixed; 
   max-width: 1024px;
-  color: aliceblue;
-  --color-big-title:#FFC2E6;  
-  --color-bold-title:#FF8DCB;
-  --bold-fonts:700;
-  --normal:400px; 
-  --font-family:IBM Plex Mono;
-  --line-height:23.4px;
-  --font-size:18px;
-  --color-text:#353430;
-  --hover:rgba(50, 49, 45, 0.40);
-  --recc:"";
-  --circle:0;
   --button:#353430;
-  --content-title:#353430;
+  --header-title:#FFC2E6;
+  --header-title-shadow:#FF0070;
+  --header-text:#353430;
+  --corner:#353430; /*уголок */
+  --background:#FF8DCB;
+  --main-title:#353430;
+  --title:#353430;
+  --main-text:#353430;
+  --bold-fonts:700;
+  --normal-fonts:400;
+  --font-size:18px;
+  --line-height:23.4px;
+  --hover:rgba(50, 49, 45, 0.40);
+  --link-shadow:#FF8DCB;
+  --link-border:#353430;
+  --font-family:"IBM Plex Mono";
+  --rec:none;
+  --point:none;
 }
 
-.header__theme-menu-button:hover{
-  border: 1px solid var(--hover);
-}
-
-.header__theme-menu-button:focus{
-  border-bottom: 1px solid var(--button);
-}
 .header{
+  height: 100vh;
+  min-height: 668px;
   padding: 20px 20px 0 20px;
+  position: relative;
 }
 
 .header__menu{
   display: grid;
-  grid-template-columns: minmax( 200px,397px) 230px minmax(200px ,316px) 70px;
-  grid-template-areas: '. m . p' ;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas: '. m .';
+  grid-area: me;
+}
+
+.header__theme-menu{
+  grid-area: m;
+  display: flex;
+  justify-content: center;
 }
 
 .header__theme-menu-list{
- display: flex;
- gap: 10px;
+  display: flex;
+  gap: 23px ;
 }
 
-.header__theme-menu-button{
+.header{
+  display: grid;
+  grid-template-columns: repeat(4 ,1fr);
+  grid-template-rows: 26px 2.4fr 130px 1fr 71px 1.2fr;
+  grid-template-areas:'me me me me' '. . . .' 't t t t' '. . . .' '. . te te' '. . . .';
+}
+
+.header__text{
+  grid-area: te;
+}
+
+.header__content{
+  color: var(--header-text);
+  font-family: var(--font-family) ,sans-serif;
+  font-size: var(--font-size);
+  font-style: normal;
+  font-weight:var(--bold-fonts);
+  line-height: var(--line-height);
+  background-color: var(--background);
+}
+
+.header__menu::after{
+  content: '';
+  width: 25px;
+  height: 25px;
+  border-top:1px solid var(--corner) ;
+  border-right: 1px solid var(--corner);
+  position: absolute;
+  inset-block-start: 20px;
+  inset-inline-end:20px;
+}
+
+.header__menu::before{
+  content: '';
+  width: 25px;
+  height: 25px;
+  border-bottom:1px solid var(--corner)  ;
+  border-left: 1px solid var(--corner) ;
+  position: absolute;
+  inset-block-end: 20px;
+  inset-inline-start: 20px;
+}
+
+.header::after{
+  content: var(--point);
+  border-radius: 50%;
+  width: 9px;
+  height: 9px;
+  background-color: var(--corner) ;
+  position: absolute;
+  fill: var(--corner) ;
+  filter: drop-shadow(0px 0px 4px var(--corner) );
+  inset-block-start: 28px;
+  inset-inline-end:29px;
+}
+
+.header::before{
+  content:var(--rec) ;
+  position: absolute;
+  width: 33px;
   height: 26px;
-  padding: 0px 13px;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
-  background-color: none;
+  color: var(--corner) ;
+  inset-block-start: 20px;
+  inset-inline-end:48px;
+  text-align: center;
+  font-family: var(--font-family) ,sans-serif;
+  font-size: var(--font-size);
+  font-style: normal;
+  font-weight:var(--normal-fonts);
+  line-height: 25px; 
 }
 
 .header__theme-menu-button{
   color: var(--button);
   text-align: center;
-  font-family: IBM Plex Mono;
-  font-size: 18px;
+  font-family: var(--font-family), sans-serif;
+  font-size: var(--font-size);
   font-style: normal;
-  font-weight: 400;
+  font-weight: var(--normal-fonts);
   line-height: 18px;
   background: none;
   border: none;
@@ -77,6 +148,7 @@
 
 .header__theme-menu-button:hover{
   border: 1px solid var(--hover);
+  padding: 0 13px 3px;  
 }
 
 .header__theme-menu-button:focus{
@@ -85,71 +157,7 @@
 
 .header__theme-menu-button_active{
   border: 1px solid var(--button);
-}
-
-.header__theme-menu{
-  grid-area: m;
-}
-
-.header__right-corner{
-  border-top: 1px solid var(--content-title);
-  width: 25px;
-  height: 25px;
-  border-right: 1px solid var(--content-title);
-  grid-area: p;
-  position: relative;
-  margin-left: auto;
-}
-
-.header__left-corner{
-  width: 25px;
-  height: 25px;
-  border-left:1px solid var(--content-title) ;
-  border-bottom: 1px solid var(--content-title  );
-}
-
-.header__right-corner::before{
-  content: '';
-  background-color: var(--color-bold-title);
-  width: var(--circle);
-  height:var(--circle);
-  border-radius: 50%;
-  color:  var(--color-bold-title);
-  margin: 8px 9px 8px 7px ;
-  fill:  var(--color-bold-title);
-  filter: drop-shadow(0px 0px 4px  var(--color-bold-title));
-  position: absolute;
-}
-
-.header__right-corner::after{
-  content: var(--recc);
-  position: absolute;
-  right: 36px;
-  top: 3px;
-  color: var(--color-bold-title);
-}
-
-.focusee{ 
-  /* content */
-  display: grid;
-  grid-template-columns: repeat(4 ,1fr);
-  grid-template-areas: 'r r r r' '. . t t' 'y . . .';
-}
-
-.header__title{
-  grid-area: r;
-  margin-top: 273px;
-  margin-left: -20px;
-}
-
-.header__text{
-  grid-area: t;
-  margin-top: 114px;
-}
-
-.header__left-corner{
-  grid-area: y;
-  margin-top: 89px;
+  padding: 0 13px 3px;
 }
 
 .main{
@@ -199,14 +207,13 @@
 
 .how{
   display: grid;
-  grid-template-columns: minmax( 1fr ,314.96px) minmax(2fr,648.918px);
-  grid-template-areas: "le po" ;
+  grid-template-columns: repeat(3 ,1fr);
+  grid-template-areas: "le p p" ;
   gap: 20px;
 }
 
 .how__content{
-  grid-area:po;
-  display: grid;
+  grid-area:p;
   gap: 20px;
 }
 
@@ -221,7 +228,7 @@
 .pictures{
   display: grid;
   grid-template-columns: repeat(3 ,1fr);
-  grid-template-rows: auto repeat(3 ,  1fr);
+  grid-template-rows: 23px 0.825fr 1fr 1.35fr;
   grid-template-areas: 'i i i' 'a a b' 'c d b ' 'c v v' ;
   gap: 20px; 
 }
@@ -253,11 +260,19 @@
 }
 
 .pictures__title{
+  background-color:  var(--background);
+  color: #000028;
+  font-family: var(--font-family), sans-serif;
+  font-size:var(--font-size);
+  font-style: normal;
+  font-weight: var(--bold-fonts);
+  line-height: var(--line-height); 
   grid-area: i;
 }
 
 .footer{
   height: 100vh;
+  min-height:668px;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -271,8 +286,8 @@
   content: '';
   width: 25PX;
   height: 25px;
-  border-top: 1px solid var(--content-title) ;
-  border-right:1px solid var(--content-title);
+  border-top: 1px solid var(--corner) ;
+  border-right:1px solid var(--corner);
   inset-block-start: 0;
   inset-inline-end: 0;
   position: absolute;  
@@ -282,17 +297,17 @@
   content: '';
   width: 25PX;
   height: 25px;
-  border-bottom: 1px solid var(--content-title) ;
-  border-left:1px solid var(--content-title);
+  border-bottom: 1px solid var(--corner) ;
+  border-left:1px solid var(--corner);
   inset-inline-start: 0;
   inset-block-end: 0;
   position: absolute;
 }
 
 .footer__title{
-  color: var(--color-big-title);
-  text-shadow: 4px 4px 0px  var(--color-bold-title);
-  font-family: var(--font-family);
+  color: var(--header-title);
+  text-shadow: 4px 4px 0px  var(--header-title-shadow);
+  font-family: var(--font-family), sans-serif;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   font-style: normal;
   font-weight: var(--bold-fonts);
@@ -300,38 +315,38 @@
 }
 
 .link{
-  color: var( --color-text);
-  font-family: IBM Plex Mono;
+  color: var( );
+  font-family: var(--font-family) ,sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 23.4px;
-  text-shadow: 2px 2px var(--color-bold-title);
+  text-shadow: 2px 2px var(--link-shadow);
   text-decoration: none;
 }
 
 .link:hover{
-  border-bottom:1px solid var( --color-text) ;
+  border-bottom:1px solid var(--link-border) ;
 }
 
 .link:focus{
-  border: 1px solid var( --color-text);
+  border: 1px solid var( --link-border);
 }
 
 .text{
-  color: var(--color-text);
-  font-family: var(--font-family);
+  color: var(--main-text);
+  font-family: var(--font-family) ,sans-serif;
   font-size:var(--font-size);
   font-style: normal;
-  font-weight: 400;
+  font-weight: var(--normal-fonts);
   line-height: var(--line-height); 
 }
 
 .title{
-  background-color:  var(--color-bold-title);
+  background-color:  var(--background);
   margin-bottom: 10px ;
-  color: #000028;
-  font-family: var(--font-family);
+  color: var(--title);
+  font-family: var(--font-family) ,sans-serif;
   font-size:var(--font-size);
   font-style: normal;
   font-weight: var(--bold-fonts);
@@ -339,19 +354,19 @@
 }
 
 .title-skinny{
-  background-color:  var(--color-bold-title);
+  background-color:  var(--background);
   margin-bottom: 10px ;
-  color: #000028;
-  font-family: var(--font-family);
+  color: var(--title);
+  font-family: var(--font-family) ,sans-serif;
   font-size:var(--font-size);
   font-style: normal;
-  font-weight: var(--normal);
+  font-weight: var(--normal-fonts);
   line-height: var(--line-height); 
 }
 
 .bold-title{
-  color:  var(--content-title);
-  font-family: var(--font-family);
+  color:  var(--main-title);
+  font-family: var(--font-family) , sans-serif;
   font-size:var(--font-size);
   font-style: normal;
   font-weight: var(--bold-fonts);
@@ -359,24 +374,52 @@
 }
 
 .big-title{
-  color: var(--color-big-title);
-  text-shadow: 4px 4px 0px  var(--color-bold-title);
-  font-family: var(--font-family);
+  color: var(--header-title);
+  text-shadow: 4px 4px 0px  var(--header-title-shadow);
+  font-family: var(--font-family), sans-serif;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   font-style: normal;
   font-weight: var(--bold-fonts);
   line-height: 82.5%; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  grid-area: t;
+  margin-left: -20px;
 }
 
 @media(width<=850px){
+  .header{
+    display: grid;
+    grid-template-columns: repeat(4 ,1fr);
+    grid-template-rows: 1fr 98px 1fr 99px  1fr 127px 1fr;
+    grid-template-areas:'. . . .''me me me me' '. . . .' 't t t t' '. . . .' '. . te te' '. . . .';
+  }
+
   .header__menu{
+    display: grid;
     grid-template-columns: 1fr 70px;
-    grid-template-areas: '. p' '. m';
+    grid-template-areas: ' . m';
+    grid-area: me;
   }
 
   .header__theme-menu-list{
-    flex-direction: column;
-    margin-top: 146px;
+    display: flex;
+    gap: 15px ;
+    flex-direction: column; 
+    justify-content:center;
+  }
+
+  .header__theme-menu-item{
+    display: flex;
+    justify-content: center;
+  }
+
+  .header__theme-menu{
+    grid-area: m;
+    display: flex;
+    justify-content: center; 
+
   }
 
   .what__content{
@@ -384,35 +427,75 @@
     grid-template-rows: repeat(3 , 1fr);
   }
 
-  .header__title{
-    margin-top: 173px;
-  }
-
-  .header__text{
-    margin-top: 162px;
-  }
-
-  .header__left-corner{
-    margin-top: 138px;
-  }
-
   .what{
     gap: 20px 0;
   }
 }
 @media (width<=520px){
-  .header__theme-menu-list{
-    flex-direction: column;
-    margin-top: 39px;
+  .header{
+    padding: 10px 10px 0 10px;
+    display: grid;
+    grid-template-columns: repeat(4 ,1fr);
+    grid-template-rows: 65PX 98px 65PX 192px 55PX 127px 55PX;
+    grid-template-areas:'. . . .''me me me me' '. . . .' 't t t t' '. . . .' 'te te te te' '. . . .';
+  }
+
+  .header__menu::after{
+    content: '';
+    width: 25px;
+    height: 25px;
+    border-top:1px solid var(--corner) ;
+    border-right: 1px solid var(--corner);
+    position: absolute;
+    inset-block-start: 10px;
+    inset-inline-end:10px;
+  }
+
+  .header__menu::before{
+    content: '';
+    width: 25px;
+    height: 25px;
+    border-bottom:1px solid var(--corner) ;
+    border-left: 1px solid var(--corner);
+    position: absolute;
+    inset-block-end: 10px;
+    inset-inline-start: 10px;
+  }
+
+  .header::after{
+    content: var(--point);
+    border-radius: 50%;
+    width: 9px;
+    height: 9px;
+    background-color: var(--corner);
+    position: absolute;
+    fill: var(--corner);
+    filter: drop-shadow(0px 0px 4px var(--corner) );
+    inset-block-start: 18px;
+    inset-inline-end:19px;
+  }
+
+  .header::before{
+    content: var(--rec);
+    position: absolute;
+    width: 33px;
+    height: 26px;
+    color: var(--corner);
+    inset-block-start: 10px;
+    inset-inline-end:38px;
+    text-align: center;
+    font-family: var(--font-family), sans-serif;
+    font-size: var(--font-size);
+    font-style: normal;
+    font-weight:var(--normal-fonts);
+    line-height: 25px; 
   }
 
   .big-title{
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    margin-left: 0;
   }
 
-  .focusee{
-    grid-template-areas: 'r r r r' 't t t t' 'y . . .';
-  }
 
   .main{
     gap: 50px;
@@ -426,13 +509,14 @@
   }
 
   .how{
-    grid-template-columns: 1fr;
-    grid-template-areas: 'le''po' ;
+    display: grid;
+    grid-template-columns: repeat(3 ,1fr);
+    grid-template-areas: "le le le" "p p p " ;
+    gap: 20px;
   }
 
   .pictures{
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(5 1fr);
+    grid-template-columns: repeat(1 , 1fr);
     grid-template-areas: 'i' 'a ' 'b' 'c' 'd' 'v'  ;
     gap: 10px;
   }
@@ -442,21 +526,9 @@
     grid-template-columns: 1fr;
   }
 
-  .header__title{
-    margin-top: 65px;
-    margin-left: 0;
-  }
-
-  .header__left-corner{
-   margin-top: 31px;
-  }
-
-  .header__text{
-    margin-top: 55px;
-  }
 
   .what{
-    gap:20;
+   gap:20;
   }
   
   .what__content{
